--- a/cfg example.cfg
+++ b/cfg example.cfg
@@ -1,8 +1,5 @@
-txt file name (имя текстового файла с его разширением .txt)
-token 1, token 2 
-(дискорд токены, получеаем их зайдя в дискорд через браузер и следуя этим указаниям 
-F12 -> Network -> F5 (ждём пока перезагрузится) -> science -> Headers -> authorization 
-копируем значение и всавляем, вы можете использовать этот токен до тех пор пока не выйдите из сессии в браузере, а так можно закрывать окно браузера)
+txt file name
+token 1, token 2
 token 2, token 1
-chat_id (айди чата в котором будет происходить разговор, для получения зах
+chat_id
 delay
